# llm-memory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_GUIDE.md  Dockerfile  PROJECT_CATALOG_FOLLOWUP.md  QUICKSTART.md  README.md  STARTUP_GUIDE.md  claude.md  config.local.example.env  docker-compose.yml  memory.md  pyproject.toml  pytest.ini  start_server.bat  start_server_silent.bat  stop_server.bat
docs/: DUAL_MEMORY_INTEGRATION_PLAN.md  FAST_MEMORY_FOUNDATION_PLAN.md  FAST_MEMORY_SCORING_SPEC.md  MEMORY_IMPORTANCE_SPEC.md  QUALITY_GATE.md  RELEASE_CHECKLIST.md  ROADMAP_CHECKLIST.md
logs/: last_start.txt
scripts/: build_finetune_dataset.py  download_model.py  ingest_logs.bat  ingest_logs.py  mcp_server.bat  restructure_memories_v2.py  start_http_server.bat
scripts/legacy/: README.md  migrate_v1_to_v2.py  restructure_memories_v2.py
src/: __init__.py  bootstrap.py  config.py  fast_memory_cli.py  models.py
src/coordination/: __init__.py  conflict_resolver.py  scope_manager.py
src/embedding/: __init__.py  embedding_service.py
tests/: conftest.py  test_config.py  test_crypto.py  test_embedding.py  test_fast_memory_cli.py  test_fast_memory_scoring.py  test_fast_memory_service.py  test_fast_memory_store.py  test_fast_memory_tools.py  test_golden_path.py  test_http_server.py  test_importance_scoring.py  test_inference_tools.py  test_integration.py  test_lance_store.py  test_multi_project_tools.py  test_novelty_hardening.py  test_persistence_policy.py  test_projects.py  test_scope_hierarchy.py  test_security.py  test_storage.py
(+24 files in other folders)
